--- a/文档/2. .github.MD
+++ b/文档/2. .github.MD
@@ -15,7 +15,29 @@ auto-badge的配置文件，用于给pr自动打标签;
 
 ## .travis.yml
 Travis CI 持续集成服务，它绑定Github上面的项目，只要有新的代码，就会自动抓取。然后，提供一个运行环境，执行测试，完成构建，还能部署到服务器。
+使用 Github 账户登入Travis CI,选择你需要Travis帮你构建的仓库，打开仓库旁边的开关。一旦激活了一个仓库，Travis 会监听这个仓库的所有变化。
 
-使用 Github 账户登入 Travis CI,选择你需要 Travis 帮你构建的仓库，打开仓库旁边的开关。一旦激活了一个仓库，Travis 会监听这个仓库的所有变化。
+language字段指定了默认运行环境
+install字段用来指定安装脚本。
+script字段指定要运行的脚本，script: true表示不执行任何脚本，状态直接设为成功。
+deployment 部署步骤
 
+before_install：install 阶段之前执行
+before_script：script 阶段之前执行
+after_failure：script 阶段失败时执行
+after_success：script 阶段成功时执行
+before_deploy：deploy 步骤之前执行
+after_deploy：deploy 步骤之后执行
+after_script：script 阶段之后执行 
 
+完整的生命周期，从开始到结束是下面的流程。
+
+before_install
+install
+before_script
+script
+aftersuccess or afterfailure
+[OPTIONAL] before_deploy
+[OPTIONAL] deploy
+[OPTIONAL] after_deploy
+after_script
