--- a/文档/2. .github.MD
+++ b/文档/2. .github.MD
@@ -41,3 +41,12 @@ aftersuccess or afterfailure
 [OPTIONAL] deploy
 [OPTIONAL] after_deploy
 after_script
+
+
+## standard-version
+bump:自动升级版本
+changelog: 自动生成changelog 
+commit:自动commit 
+tag:自动打tag  
+
+这四个是可以配置跳过的，默认false,不跳过
