--- a/文档/1. 环境搭建.MD
+++ b/文档/1. 环境搭建.MD
@@ -5,8 +5,10 @@ mkdir test
 <!--接下来会有一串的提示,推荐kebab-case风格，小写字母，多个单词用-（dash）分隔，如my-component--> 
 npx vue-sfc-cli   
   component name: test-sfc-cli
-  owner: liuyuanyuan_npm
+  owner: charlesliu
 cd vue-sfc-cli 
 git init
 yarn (node版本会有所限制)
+
+yarn upgrade standard-version@9.5.0  
 yarn run dev
