--- a/文档/1. 环境搭建.MD
+++ b/文档/1. 环境搭建.MD
@@ -5,7 +5,7 @@ mkdir test
 <!--接下来会有一串的提示,推荐kebab-case风格，小写字母，多个单词用-（dash）分隔，如my-component--> 
 npx vue-sfc-cli   
   component name: test-sfc-cli   
-  owner: liuyuanyuannumberone   
+  owner: liuyuanyuannumberone    ----->github用户名
 cd vue-sfc-cli 
 git init
 yarn (node版本会有所限制)
@@ -13,5 +13,5 @@ yarn run dev
 
 
 ## 修改package.json文件
-修改包名@liuyuanyuan_npm/xxxx
-yarn upgrade standard-version@9.5.0  
+修改包名@charlesliuy/xxxx 
+yarn upgrade standard-version@9.5.0
