--- a/文档/3. github-ci.MD
+++ b/文档/3. github-ci.MD
@@ -43,10 +43,7 @@ aftersuccess or afterfailure
 after_script
 
 
-## standard-version
-bump:自动升级版本
-changelog: 自动生成changelog 
-commit:自动commit 
-tag:自动打tag  
+## lint-staged
 
-这四个是可以配置跳过的，默认false,不跳过
+## husky
+
