--- a/文档/3. github-ci.MD
+++ b/文档/3. github-ci.MD
@@ -46,4 +46,29 @@ after_script
 ## lint-staged
 
 ## husky
-
+```json
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "post-commit": "git update-index --again",
+      "pre-push": "yarn test"
+    }
+  },
+  "lint-staged": {
+    "*.@(md|json)": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.js": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ],
+    "*.vue": [
+      "eslint --fix",
+      "prettier --write",
+      "stylelint --fix",
+      "git add"
+    ]
+  }
+```
