--- a/文档/1. 环境搭建.MD
+++ b/文档/1. 环境搭建.MD
@@ -12,15 +12,16 @@ yarn (node版本会有所限制)
 yarn run dev
 
 ## 修改package.json文件
-yarn upgrade standard-version@9.5.0
+yarn upgrade standard-version@9.5.0   jest@29.4.2 -D
 yarn add npm-run-all -D
+添加jest.config.js文件
 
 修改包名 @charlesliuy/xxxx 
 修改scripts里边的串行和并行(npm-run-all)
 ```json
  "scripts": {
     "start": "vue-styleguidist server",
-    "test": "jest --verbose",
+    "test": "jest",
     "build": "run-p build:*",
     "build:doc": "vue-styleguidist build",
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/test-sfc-cli.umd.js",
