--- a/文档/1. 环境搭建.MD
+++ b/文档/1. 环境搭建.MD
@@ -12,7 +12,7 @@ yarn (node版本会有所限制)
 yarn run dev
 
 ## 修改package.json文件
-yarn upgrade standard-version@9.5.0  jest@29.4.2  -D
+yarn upgrade standard-version@9.5.0  jest@29.4.2  rollup-plugin-clear -D
 yarn add npm-run-all -D
 添加jest.config.js文件
 
@@ -20,16 +20,6 @@ yarn add npm-run-all -D
 修改scripts里边的串行和并行(npm-run-all)
 ```json
  "scripts": {
-    "start": "vue-styleguidist server",
-    "test": "jest",
-    "build": "run-p build:*",
-    "build:doc": "vue-styleguidist build",
-    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/test-sfc-cli.umd.js",
-    "build:es": "rollup --config build/rollup.config.js --format es --file dist/test-sfc-cli.esm.js",
-    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/test-sfc-cli.min.js",
-    "prepublishOnly": "run-s release-patch build",
-    "release-patch": "standard-version --release-as patch",
-    "release-minor": "standard-version --release-as minor",
-    "release-major": "standard-version --release-as major"
+    ...
   }
 ```
