--- a/文档/2. publish.MD
+++ b/文档/2. publish.MD
@@ -12,6 +12,8 @@ npm publish 首次发布失败，切换到lyy-hosted发布一次，然后切回l
 }
 ```
 
+3. 定义核心依赖库 peerDependencies
+
 ## 发包内容
 当执行npm publish 命令时,npm 会打包当前目录下的文件，同时根据.gitignore,file,.npmignore来决定忽略掉哪些文件。
 
