--- a/文档/4. vue-styleguidist.MD
+++ b/文档/4. vue-styleguidist.MD
@@ -1,9 +1,4 @@
-# vue-styleguidist
+# vue-styleguidist 
 本地开发demo与生成文档
 
-第三方库打包问题
-@rollup/plugin-node-resolve
-peerDependencies 问题
-publish 问题
-测试包问题
-types问题
+rollup打包js库官网/引入第三方库
